# tasker

./: .gitignore  README.md  hello_world.c  hello_world.cpp
inc/: SafeStack.h  ThreadGuard.h
lab1-tarray/: main.cpp  tarray.cpp  tarray.geany  tarray.hpp  tarrayitem.hpp
lab2-threads/: .gitignore  cortege.cpp  cortege.hpp  input.txt  kit.cpp  kit.hpp  lab2-threads.geany  main.cpp  makefile  threadarmy.hpp
lab4-stack/: CMakeLists.txt  first.txt  second.txt  third.txt
lab4-stack/inc/: Executor.h  SafeStack.h  ThreadGuard.h  ThreadSquad.h
lab4-stack/src/: main.cpp
lab6-qsort/: CMakeLists.txt
lab6-qsort/src/: main.cpp
